--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "webcomponentsjs": "^0.7.14",
     "polymer": "^1.1.4",
     "simpla": "git@github.com:simplaio/simpla.git",
-    "sm-helper-button": "git@github.com:simplaio/sm-helper-button.git"
+    "sm-helper-button": "git@github.com:simplaio/sm-helper-button.git",
+    "sm-connect-auth": "git@github.com:simplaio/sm-connect-auth.git"
   },
   "devDependencies": {
     "web-component-tester": "^3.3.22",
@@ -32,6 +33,7 @@
   "componentImports": [
     "polymer/polymer.html",
     "simpla/simpla.html",
-    "sm-helper-button/sm-helper-button.html"
+    "sm-helper-button/sm-helper-button.html",
+    "sm-connect-auth/sm-connect-auth.html"
   ]
 }
