--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "webcomponentsjs": "^0.7.14",
     "polymer": "^1.1.4",
-    "simpla": "git@github.com:simplaio/simpla.git",
+    "simpla-core": "git@github.com:simplaio/simpla-core.git",
     "sm-helper-button": "git@github.com:simplaio/sm-helper-button.git",
     "sm-connect-auth": "git@github.com:simplaio/sm-connect-auth.git"
   },
@@ -32,7 +32,7 @@
   },
   "componentImports": [
     "polymer/polymer.html",
-    "simpla/simpla.html",
+    "simpla-core/simpla-core.html",
     "sm-helper-button/sm-helper-button.html",
     "sm-connect-auth/sm-connect-auth.html"
   ]
