add simpla-v2-compat, use Simpla._v1 instead of Simpla

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "polymer": "^1.1.4",
     "sm-ui-core": "SimplaElements/sm-ui-core#^0.1.0",
     "sm-ui-user-menu": "SimplaElements/sm-ui-user-menu#^0.1.4",
-    "sm-module-notify": "SimplaElements/sm-module-notify#^0.1.0"
+    "sm-module-notify": "SimplaElements/sm-module-notify#^0.1.0",
+    "simpla-v2-compat": "simplaio/simpla-v2-compat#^0.1.0"
   },
   "devDependencies": {
     "web-component-tester": "^3.3.22",
