add promise polyfill in tests for ie11

--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "web-component-tester": "^3.3.22",
-    "test-fixture": "PolymerElements/test-fixture#~1.0.0"
+    "test-fixture": "PolymerElements/test-fixture#~1.0.0",
+    "es6-promise": "^4.0.5"
   }
 }
